; ModuleID = '/home/carl/AnghaBench/linux/net/ipv6/extr_ip6_tunnel.c_HASH.c'
source_filename = "/home/carl/AnghaBench/linux/net/ipv6/extr_ip6_tunnel.c_HASH.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.in6_addr = type { i32 }

@IP6_TUNNEL_HASH_SIZE_SHIFT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.in6_addr*, %struct.in6_addr*)* @HASH to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @HASH(%struct.in6_addr* %0, %struct.in6_addr* %1) #0 {
  %3 = alloca %struct.in6_addr*, align 8
  %4 = alloca %struct.in6_addr*, align 8
  %5 = alloca i32, align 4
  store %struct.in6_addr* %0, %struct.in6_addr** %3, align 8
  store %struct.in6_addr* %1, %struct.in6_addr** %4, align 8
  %6 = load %struct.in6_addr*, %struct.in6_addr** %3, align 8
  %7 = call i32 @ipv6_addr_hash(%struct.in6_addr* %6)
  %8 = load %struct.in6_addr*, %struct.in6_addr** %4, align 8
  %9 = call i32 @ipv6_addr_hash(%struct.in6_addr* %8)
  %10 = xor i32 %7, %9
  store i32 %10, i32* %5, align 4
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* @IP6_TUNNEL_HASH_SIZE_SHIFT, align 4
  %13 = call i32 @hash_32(i32 %11, i32 %12)
  ret i32 %13
}

declare dso_local i32 @ipv6_addr_hash(%struct.in6_addr*) #1

declare dso_local i32 @hash_32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
